objects/ASI_CRM_TOV__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Arrived_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arrived Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Is_POSM_TOV__c</fullName>
        <formula>CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_CN_TOV&apos;) &amp;&amp; NOT( ISNULL( ASI_CRM_Free_Goods_Request__c ) ) &amp;&amp; CONTAINS(ASI_CRM_Free_Goods_Request__r.ASI_CRM_Record_Type_Developer_Name__c, &apos;ASI_FOC_CN_POSM&apos;)</formula>
        <label>Is CN POSM TOV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_JDE_Total_Amount__c</fullName>
        <label>JDE Total Amount</label>
        <summarizedField>ASI_CRM_TOV_Detail__c.ASI_CRM_CN_Copy_SUM__c</summarizedField>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Supplier_Email__c</fullName>
        <label>Supplier Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Vendor_Email_1__c</fullName>
        <label>Vendor Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Vendor_Email_2__c</fullName>
        <label>Vendor Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Free_Goods_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Goods Request</label>
        <referenceTo>ASI_FOC_Free_Goods_Request__c</referenceTo>
        <relationshipLabel>TOVs</relationshipLabel>
        <relationshipName>TOVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TOVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Request_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF SO Request Number</label>
        <referenceTo>ASI_KOR_Sales_Order_Request__c</referenceTo>
        <relationshipLabel>TOVs</relationshipLabel>
        <relationshipName>TOVs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_Number__c</fullName>
        <label>SO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SO_Type__c</fullName>
        <label>SO Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Number_of_Line__c</fullName>
        <label>Total Number of Line</label>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_TOV_Qty__c</fullName>
        <label>Total TOV Qty</label>
        <summarizedField>ASI_CRM_TOV_Detail__c.ASI_CRM_Order_QTY__c</summarizedField>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Customer_Legal_Name__c</fullName>
        <formula>ASI_CRM_SF_SO_Request_Number__r.ASI_CRM_CN_Customer__r.ASI_CRM_CN_Legal_Name__c</formula>
        <label>Customer Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_IsCommunity__c</fullName>
        <formula>ASI_CRM_SF_SO_Request_Number__r.ASI_CTY_CN_WS_IsCommunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CN WS Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_SOR_Sales_Email_1__c</fullName>
        <label>SOR Sales Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_SOR_Sales_Email_2__c</fullName>
        <label>SOR Sales Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_SOR_Sales_Email_3__c</fullName>
        <label>SOR Sales Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Status__c</fullName>
        <formula>IF(TEXT(ASI_CRM_Status__c) == &apos;Held&apos;,  $Label.ASI_CTY_CN_WS_Home_Dashboard_Pending_Payment ,
    IF(TEXT(ASI_CRM_Status__c) == &apos;Released&apos; || TEXT(ASI_CRM_Status__c) == &apos;Dispatched&apos;,  $Label.ASI_CTY_CN_WS_TOV_Status_Dispatched_CN ,
        IF(TEXT(ASI_CRM_Status__c) == &apos;Received&apos;,  $Label.ASI_CTY_CN_WS_TOV_Status_Received_CN ,  $Label.ASI_CTY_CN_WS_Delivery_Status_Unknown ) ) )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_WS_Total_Order_Qty_CA__c</fullName>
        <label>Total TOV Qty(CA)</label>
        <summarizedField>ASI_CRM_TOV_Detail__c.ASI_CTY_CN_WS_Order_Qty_CA_RollUp__c</summarizedField>
        <summaryForeignKey>ASI_CRM_TOV_Detail__c.ASI_CRM_TOV__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Is_POSM_PDF_Display_Body__c</fullName>
        <description>for POSM TOV send email  display pdf in the body</description>
        <formula>ASI_CRM_CN_Is_POSM_TOV__c  &amp;&amp;
 ASI_CRM_Free_Goods_Request__r.ASI_MFM_FromWarehouse__r.ASI_MFM_Is_Display_PDF_In_Tov_Email_Body__c</formula>
        <label>Is POSM PDF Display Body</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SIREmailAddress1__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SIREmailAddress2__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SIREmailAddress3__c</fullName>
        <label>SIR Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Total_Amount_wTax__c</fullName>
        <formula>ASI_CRM_CN_JDE_Total_Amount__c * IF(  ASI_CRM_CN_Tax_Rate__c == 0  , 1.13,1+ASI_CRM_CN_Tax_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>订单付款金额（含税）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>TOV</label>
    <listViews>
        <fullName>ASI_CRM_CN_FOC_SO</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <filters>
            <field>ASI_CRM_Free_Goods_Request__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Dispatched</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>S3</value>
        </filters>
        <label>CN FOC TOV - Dispatched</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_SO</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <filters>
            <field>ASI_CRM_SF_SO_Request_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Dispatched</value>
        </filters>
        <label>CN SO TOV - Dispatched</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_TOV_not_Received</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>notEqual</operation>
            <value>Received</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>S3,S4</value>
        </filters>
        <label>TOV not Received (S3,S4)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CNTOV_Final</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV_Final</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>V2</value>
        </filters>
        <label>CNTOV - Final</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CN_POSM_TOV_Dispatched</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_SO_Number__c</columns>
        <columns>ASI_CRM_SO_Type__c</columns>
        <columns>ASI_CRM_Order_Date__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Free_Goods_Request__c</columns>
        <columns>ASI_CRM_SF_SO_Request_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_TOV__c.ASI_CRM_CN_TOV</value>
        </filters>
        <filters>
            <field>ASI_CRM_Free_Goods_Request__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Dispatched</value>
        </filters>
        <filters>
            <field>ASI_CRM_SO_Type__c</field>
            <operation>equals</operation>
            <value>P2</value>
        </filters>
        <label>CN POSM TOV - Dispatched</label>
        <language>en_US</language>
        <sharedTo>
            <role>ASI_CN</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TOV-{YY}{0000000}</displayFormat>
        <label>TOV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TOVs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_TOV</fullName>
        <active>true</active>
        <label>CN TOV</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_TOV_Final</fullName>
        <active>true</active>
        <label>CN TOV (Final)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>